<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BorderWait</string>
    <string name="action_settings">Action Settings</string>
    <string name="title_activity_marker">Create/Edit Marker</string>
    <string name="label_email">Email:</string>
    <string name="label_pass">Password:</string>
    <string name="label_remember">Remember Me</string>
    <string name="button_signin">Sign In</string>
    <string name="button_signout">Sign Out</string>
    <string name="button_signup">Sign Up</string>
    <string name="label_hi">Hi</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="label_signup_name">Name:</string>
    <string name="label_signup_email">Email:</string>
    <string name="label_signup_password">Password:</string>
    <string name="label_signup_confirm">Confirm Password:</string>
    <string name="button_signup_ok">OK</string>
    <string name="button_signup_clear">Clear</string>
    <string name="button_signup_cancel">Cancel</string>
    <string name="checkbox_signin_remember">Remember me?</string>

</resources>
