<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEmail"
        android:layout_below="@+id/etEmail"
        android:layout_marginTop="17dp"
        android:text="@string/label_pass"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="165dip"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvPassword"
        android:layout_alignBottom="@+id/tvPassword"
        android:layout_alignRight="@+id/etEmail"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etEmail"
        android:layout_alignBottom="@+id/etEmail"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="28dp"
        android:text="@string/label_email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_alignBaseline="@+id/btnSignin"
        android:layout_alignBottom="@+id/btnSignin"
        android:layout_alignLeft="@+id/tvPassword"
        android:text="@string/button_signup" />

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_alignRight="@+id/etPassword"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="55dp"
        android:text="@string/button_signin" />

    <CheckBox
        android:id="@+id/cbxRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnsignup"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:text="@string/checkbox_signin_remember" />

</RelativeLayout>
