<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.borderwait.SignupActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/tvPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEmail"
        android:layout_below="@+id/tvEmail"
        android:layout_marginTop="40dp"
        android:text="@string/label_signup_password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvPass"
        android:layout_below="@+id/tvPass"
        android:layout_marginTop="46dp"
        android:text="@string/label_signup_confirm"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dip"
        android:text="@string/label_signup_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etSignupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:ems="10"
        android:inputType="textPersonName" >
        
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etSignupName"
        android:layout_below="@+id/etSignupName"
        android:layout_marginTop="25dp"
        android:text="@string/label_signup_email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etSignupEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEmail"
        android:layout_below="@+id/tvEmail"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etSignupPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvConfirm"
        android:layout_below="@+id/tvPass"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etSignupConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvConfirm"
        android:layout_below="@+id/tvConfirm"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSignupCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnSignupClear"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/btnSignupClear"
        android:text="@string/button_signup_cancel" />

    <Button
        android:id="@+id/btnSignupClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSignupOk"
        android:layout_alignBottom="@+id/btnSignupOk"
        android:layout_centerHorizontal="true"
        android:text="@string/button_signup_clear" />

    <Button
        android:id="@+id/btnSignupOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tvPass"
        android:layout_below="@+id/etSignupConfirm"
        android:layout_marginTop="57dp"
        android:text="@string/button_signup_ok" />

</RelativeLayout>
